Prepare for the 0.0.48 release.
I pushed back the `JarDependency` artifacts deprecations - this needs a
bit more time to remove nicely.

I also updated the `release-changelog-helper.sh` script to just output
the changelog bullets, folks have been solid at using `rbt patch` for a
while now, obviating the need for timestamps, sha and users info to
track down RBs/PRs.

Testing Done:
CI went green here:
  https://travis-ci.org/pantsbuild/pants/builds/81105632

Bugs closed: 2223

Reviewed at https://rbcommons.com/s/twitter/r/2849/